<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jukusoft.mmo</groupId>
    <artifactId>mmorpg-client</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>

    <modules>
        <module>core</module>
        <module>engine</module>
        <module>game</module>
        <module>launcher</module>
        <module>desktop</module>
	</modules>

    <properties>
        <!-- Java version -->
        <java.version>1.8</java.version>

        <!-- JUnit version -->
        <junit.version>4.12</junit.version>

        <!-- logger version -->
        <slf4j.version>1.7.25</slf4j.version>
        <log4j.version>2.10.0</log4j.version>

        <!-- jhardware to get hardware information -->
        <jhardware.version>0.8.5</jhardware.version>

        <!-- ini4j parser -->
        <ini4j.version>0.5.4</ini4j.version>

        <!-- apache commons io -->
        <apache.commons.io.version>2.6</apache.commons.io.version>

        <!-- vertx.io version -->
        <vertx.version>3.5.0</vertx.version>

        <easy-i18n.version>0.9.11</easy-i18n.version>

        <!-- libGDX version -->
        <libgdx.version>1.9.6</libgdx.version>

        <!-- for libGDX tests -->
        <mockito.version>2.2.7</mockito.version>

        <!-- file encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <!-- JUnit tests -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- set Java version -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>